--- a/css.css
+++ b/css.css
@@ -2,8 +2,15 @@
     background-color: rgb(241, 245, 242);
     font-family: Arial, Helvetica, sans-serif;
 }
+.my_name{
+    text-align: center;
+    font-size: 2rem;
+}
 body div{
     margin: 2rem;
+}
+#index_section{
+    padding-bottom: 2rem;
 }
 section{
     width: 70%;
@@ -69,12 +76,19 @@ ul{
     display: flex;
     /* flex-direction: column; */
     text-decoration: none;
+
+    justify-content: space-around;
 }
+/* #admin_page{
+    margin-bottom: 1rem;
+} */
 li{
     margin-inline: 2rem;
     padding: 2rem 1rem;
     border: 1px solid rgba(4, 4, 4, 0.33);
     border-radius: 50%;
+    /* text-transform: none; */
+    list-style-type: none;
     background-color: rgb(161, 203, 188);
 }
 li a{
@@ -82,6 +96,7 @@ li a{
     height: 100%;
     text-decoration: none;
     color: rgb(4, 4, 4);
+    background-color: inherit;
 }
 .radio_divs{
     display: flex;
