--- a/css.css
+++ b/css.css
@@ -28,7 +28,7 @@ h1, h2{
 }
 form{
     padding: 2rem;
-    width: 70%;
+    width: 80%;
     margin-inline: auto;
     display: flex;
     flex-direction: column;
@@ -43,16 +43,17 @@ input, select{
     border: none;
     border-bottom: 1px solid rgb(47, 58, 55);
     padding: 0.75rem;
-    padding-right: 9.5rem;
+    width: 70%;
+    /* padding-right: 9.5rem; */
     outline: none;
 }
-input:hover{
+input:hover select:hover{
     box-shadow: 2px 2px 2px 2px rgba(4, 4, 4, 0.33);
 }
-input:focus{
+input:focus select:focus{
     border: 1px solid rgb(119, 199, 171);
 }
-input:active{
+input:active select:focus{
     outline: none;
     box-shadow: 2px 2px 2px 2px rgba(4, 4, 4, 0.33);
 }
@@ -66,7 +67,6 @@ button{
     margin-left: 40%;
     border-radius: 10px;
     box-shadow: 2px 2px 2px 2px rgba(4, 4, 4, 0.33);
-    translate: (-50%, -50%);
 }
 button:active{
     box-shadow: 2px 2px 2px 2px rgba(4, 4, 4, 0.33) inset;
